- TruePNG 0.5.0.4 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXX - YYY
- Added Matroska support with mkclean for .mkv, .mka, and .mks file extensions (SpanishDogg).
- Added XML (.xml, .fb2 .xsl, .xslt) support with Leanify.
- Added LUA (.lua .luac) support with Leanify.
- Added more PDF profiles, including without downsampling, 100 dpi, 200 dpi and 600 dpi (stratos chatzi).
- Added INI option ExcludeMask="" to specify paths (folder/files) that contain it as substring will be excluded (Tomasz W.).
- Added INI option ZIPRecurse=false prevent Leanify inside ZIP files.
- Added INI option XMLEnableLeanify=false enable Leanify on XML files.
- Added INI option LUAEnableLeanify=false enable Leanify on LUA files.
- Added Leanify to the JPEG tool chain.
- Added Leanify to the EXE tool chain.
- Added .rdb and .gft extensions to the ZIP tool chain.
- Slightly smaller PDF recompression by using dDetectDuplicateImages=true Ghostcript switch.
- Fixed log levels in Options dialog.
- Better quality and smaller PDF by adding -dOptimize=true -dConvertCMYKImagesToRGB=true -dColorConversionStrategy=/sRGB -dColorImageDownsampleType=/Bicubic -dGrayImageDownsampleType=/Bicubic -dMonoImageDownsampleType=/Bicubic.
- Updated TruePNG to 0.5.0.4.
- Upgraded distributions to 7-Zip 9.38.
- Minor source code improvements.


7.00 - 2015/01/21
- Added FLAC compression using FLACOUT (DotDotDot).
- Added MP4 compression (.mp4 .m4a .m4b, .m4p, .m4r .m4v .acc) using mp4v2 (Francisco Eirea Bito-on).
- Added Autodesk Revit (.rvt) and Solidworks formats (.sldprt, .slddrw, .sldasm) to the OLE tool chain (maadjordan).
- Added .BSZ .GRS .ITA .MVZ .PK3 .R2SKIN .STZ .WBA extensions to ZIP toolchain (Jaff).
- Added eDrawings (easm) to the ZIP tool chain (maadjordan).
- Added SVG extension to GZ/SVG tool chain.
- Integrated Leanify compression for GZ, SWF and ZIP formats.