@@ -134,6 +134,7 @@ XXXX - YYY
 - Added Matroska support with mkclean for .mkv, .mka, and .mks file extensions (SpanishDogg).
 - Added XML (.xml, .fb2 .xsl, .xslt) support with Leanify.
 - Added LUA (.lua .luac) support with Leanify.
+- Allow concurrent executions of different FileOptimizer instances over different file sets.
 - Added more PDF profiles, including without downsampling, 100 dpi, 200 dpi and 600 dpi (stratos chatzi).
 - Added INI option ExcludeMask="" to specify paths (folder/files) that contain it as substring will be excluded (Tomasz W.).
 - Added INI option ZIPRecurse=false prevent Leanify inside ZIP files.
